# criminology

./: .gitignore  README.md  pyproject.toml
criminology/: .dockerignore  Dockerfile  entrypoint.prod.sh  pytest.ini
criminology/core/management/commands/: generate_secret_key.py
criminology/criminals/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
criminology/criminals/migrations/: 0001_initial.py  0002_userprofile.py  0003_remove_criminaloffenselink_content_type_and_more.py
criminology/criminals/templates/criminals/: add_criminal.html  all_criminals.html  home.html  mass_add_criminals.html  search.html  view_federal_felons.html  view_federal_infractions.html  view_federal_misdemeanors.html  view_state_felons.html  (+2 more)
criminology/criminology/: asgi.py  celery.py  urls.py  wsgi.py
criminology/criminology/settings/: __init__.py  base.py  dev.py  production.py  test.py
criminology/criminology/templates/: base.html  index.html
criminology/register/: urls.py  views.py
criminology/register/templatetags/: form_filters.py
criminology/tests/: conftest.py  factories.py
criminology/tests/admin/: test_criminals_admin.py  test_user_admin.py
criminology/tests/forms/: test_criminals_forms.py  test_user_forms.py
criminology/tests/models/: test_criminals_models.py  test_user_models.py
criminology/tests/views/: test_user_flow.py
criminology/user/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
criminology/user/migrations/: 0001_initial.py
start-up/: docker-compose.yaml
start-up/nginx/conf.d/: default.conf
(+10 files in other folders)
